Fixed word-wrap on homepage

--- a/style.css
+++ b/style.css
@@ -183,8 +183,11 @@ header {
 
 .welcome-text {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    flex: 1;
     padding-left: 2em;
-    padding-right: 2em;
     top: 0;
     bottom: 0;
     width: 100%;
@@ -201,6 +204,7 @@ header {
 .welcome-text h1,
 h2 {
     padding-bottom: 20px;
+    white-space: nowrap;
 }
 
 .welcome-text h1 {
@@ -216,26 +220,20 @@ h2 {
 #line-three {
     font-weight: bolder;
     margin-bottom: 50px;
-}
-
-#line-one {
     padding-left: 0;
 }
 
 #line-two {
     color: #e7c14e;
-    padding-left: 1.5vw;
 }
 
 #line-three {
     color: #ee8438;
-    padding-left: 3.5vw;
 }
 
 .welcome-text ul {
     list-style-type: none;
     padding-left: 0;
-    height: max-content;
 }
 
 .welcome-text h1,
@@ -246,7 +244,6 @@ h2 {
 }
 
 .welcome-text ul li p {
-    
     font-size: 1.1em;
 }
 
@@ -259,7 +256,7 @@ h2 {
     margin: 0 2vw;
     border-radius: 15px;
     border: none;
-    padding: 1vh 2vw;
+    padding: 1vh 40px;
     background-color: #49aabc;
     text-decoration: none;
     color: #241e19;
